<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <TextView
        android:text="@string/course_choose"
        android:layout_width="match_parent"
   		 android:layout_height="wrap_content"
        />
     <TextView
        android:text="@string/english"
        android:layout_width="match_parent"
   		android:layout_height="wrap_content"
        />
     <LinearLayout
         android:layout_width="match_parent"
   		 android:layout_height="wrap_content"
   		 android:orientation="horizontal"
         >
         <Button
            android:text="@string/english"
            android:layout_width="wrap_content"
   		 	android:layout_height="wrap_content"
   		 	android:layout_weight="1"
             />
         <Button
            android:text="@string/english"
            android:layout_width="wrap_content"
   		 	android:layout_height="wrap_content"
   		 	android:layout_weight="1"
             />
         <Button
            android:text="@string/english"
            android:layout_width="wrap_content"
   		 	android:layout_height="wrap_content"
   		 	android:layout_weight="1"
             />
       </LinearLayout>
 		<TextView
        	android:text="@string/politics"
        	android:layout_width="match_parent"
   		 	android:layout_height="wrap_content"
        	/>
 		 <Button
            android:text="@string/politics"
            android:layout_width="wrap_content"
   		 	android:layout_height="wrap_content"
             />
 		 <TextView
	        android:text="@string/math"
	        android:layout_width="match_parent"
	   		android:layout_height="wrap_content"
	        />
     <LinearLayout
         android:layout_width="match_parent"
   		 android:layout_height="wrap_content"
   		 android:orientation="horizontal"
         >
         <Button
            android:text="@string/math"
            android:layout_width="wrap_content"
   		 	android:layout_height="wrap_content"
   		 	android:layout_weight="1"
             />
         <Button
            android:text="@string/math"
            android:layout_width="wrap_content"
   		 	android:layout_height="wrap_content"
   		 	android:layout_weight="1"
             />
         <Button
            android:text="@string/math"
            android:layout_width="wrap_content"
   		 	android:layout_height="wrap_content"
   		 	android:layout_weight="1"
             />
       </LinearLayout>
        <LinearLayout
         android:layout_width="match_parent"
   		 android:layout_height="wrap_content"
   		 android:orientation="horizontal"
         >
         <TextView
	        android:text="tring/professional_course"
	        android:layout_width="wrap_content"
	   		android:layout_height="wrap_content"
	   		android:layout_weight="1"
	        />
         <EditText 
            android:text=""
	        android:layout_width="wrap_content"
	   		android:layout_height="wrap_content"
	   		android:layout_weight="3"
             />
         </LinearLayout>
         <LinearLayout
         android:layout_width="match_parent"
   		 android:layout_height="wrap_content"
   		 android:orientation="horizontal"
         >
         <TextView
	        android:text="@string/professional_course"
	        android:layout_width="wrap_content"
	   		android:layout_height="wrap_content"
	   		android:layout_weight="1"
	        />
         <EditText 
            android:text=""
	        android:layout_width="wrap_content"
	   		android:layout_height="wrap_content"
	   		android:layout_weight="3"
             />
         </LinearLayout>
          <Button
            android:text="@string/complete"
            android:layout_width="wrap_content"
   		 	android:layout_height="wrap_content"
   		 	android:layout_gravity="center_horizontal"
             />
</LinearLayout>
