<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#ffffff" >
    <LinearLayout
        android:layout_width="match_parent"
    	android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        >
        <LinearLayout
        android:layout_width="match_parent"
    	android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="3"
        >
         <TextView
            android:id="@+id/diary"
            android:layout_width="wrap_content"
    		android:layout_height="match_parent"
    		android:text="@string/diary"
    		android:gravity="center"
    		android:layout_gravity="center"
            />
        </LinearLayout>
        <TextView
            android:id="@+id/today_rec"
            android:layout_width="wrap_content"
    		android:layout_height="wrap_content"
    		android:layout_weight="1"
    		android:text="@string/today_rec"
    		android:layout_gravity="center"
    		android:gravity="center"
            />
        </LinearLayout>
    <GridView
        android:id="@+id/notes_grid"
        android:layout_width="match_parent"
    	android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:numColumns="2"
        android:stretchMode="columnWidth"
        android:layout_weight="3"
        />
    <TextView
        android:id="@+id/my_footprint"
        android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:text="@string/myfootprint"
    	android:layout_marginRight="2dp"
        />
 	<LinearLayout
        android:layout_width="match_parent"
    	android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="1"
        >
         <Button
            android:id="@+id/take_photo"
            android:layout_width="wrap_content"
    		android:layout_height="match_parent"
    		android:text="拍照"
    		android:layout_gravity="center_horizontal"
            />
        </LinearLayout>
</LinearLayout>
